Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4450

misleading error messages from init_from_sql_statement_string()

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.2
    • 10.0.4
    • None
    • None

    Description

      when init_from_sql_statement_string() is used for discovery, and the sql is not correct — cannot be parsed — the parser error is lost on the way and a user gets an incomprehensible error message that does not show where a real problem is. This needs to be fixed.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            serg Sergei Golubchik
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0.5d
                0.5d
                Remaining:
                Time Spent - 1h Remaining Estimate - 3h
                3h
                Logged:
                Time Spent - 1h Remaining Estimate - 3h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.