MDEV-4450 misleading error messages from init_from_sql_statement_string()